# m1nd

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  FINAL-REPORT.md  INTEGRATION-GUIDE.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.pt-br.md  README.zh.md  STATUS-REPORT.md  antibodies.json.bak  demo-cinema.tape
.github/workflows/: deploy-wiki.yml  release.yml
docs/: index.html
docs/de/: index.html
docs/es/: index.html
docs/fr/: index.html
docs/it/: index.html
docs/pt-br/: index.html
docs/wiki/: book.toml
docs/wiki-build/: 404.html  benchmarks.html  changelog.html  faq.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-93e3b672.js  toc-35a7562c.js  toc.html
docs/wiki-build/api-reference/: activation.html  analysis.html  exploration.html  lifecycle.html  memory.html  overview.html  perspectives.html
docs/wiki-build/architecture/: graph-engine.html  ingest.html  mcp-server.html  overview.html
docs/wiki-build/concepts/: hebbian-plasticity.html  spreading-activation.html  structural-holes.html  xlr-noise-cancellation.html
docs/wiki-build/tutorials/: first-query.html  multi-agent.html  quickstart.html
docs/wiki/src/: SUMMARY.md  benchmarks.md  changelog.md  faq.md  introduction.md
docs/wiki/src/api-reference/: activation.md  analysis.md  exploration.md  lifecycle.md  memory.md  overview.md  perspectives.md
docs/wiki/src/architecture/: graph-engine.md  ingest.md  mcp-server.md  overview.md
docs/wiki/src/concepts/: hebbian-plasticity.md  spreading-activation.md  structural-holes.md  xlr-noise-cancellation.md
docs/wiki/src/tutorials/: first-query.md  multi-agent.md  quickstart.md
docs/zh/: index.html
m1nd-core/: Cargo.toml
m1nd-core/benches/: core_benchmarks.rs
m1nd-core/src/: activation.rs  antibody.rs  builder.rs  counterfactual.rs  domain.rs  epidemic.rs  error.rs  flow.rs  graph.rs  layer.rs  lib.rs  plasticity.rs  resonance.rs  seed.rs  semantic.rs  snapshot.rs  snapshot_bin.rs  temporal.rs  topology.rs  tremor.rs  trust.rs  types.rs  xlr.rs
m1nd-ingest/: Cargo.toml
m1nd-ingest/src/: cross_file.rs  diff.rs  json_adapter.rs  l1ght_adapter.rs  lib.rs  merge.rs  resolve.rs  walker.rs
m1nd-ingest/src/extract/: generic.rs  go.rs  java.rs  mod.rs  python.rs  rust_lang.rs  tree_sitter_ext.rs  typescript.rs
m1nd-mcp/: Cargo.toml
m1nd-mcp/src/: brand.rs  cli.rs  engine_ops.rs  http_server.rs  http_types.rs  layer_handlers.rs  lib.rs  main.rs  persist_handlers.rs  personality.rs  perspective_handlers.rs  protocol.rs  report_handlers.rs  search_handlers.rs  server.rs  session.rs  surgical_handlers.rs  tools.rs
m1nd-mcp/src/perspective/: peek_security.rs  validation.rs
m1nd-mcp/src/protocol/: layers.rs  mod.rs  surgical.rs
m1nd-mcp/tests/: perspective_golden.rs  perspective_suggest_affinity.rs  test_surgical.rs  test_surgical_v2.rs  test_v04.rs
wiki-build/: print.html  searcher-c2a407aa.js  searchindex-7447e1d8.js
wiki-build/api-reference/: exploration.html  memory.html  perspectives.html
wiki-build/concepts/: hebbian-plasticity.html
wiki-build/tutorials/: first-query.html  multi-agent.html  quickstart.html
