[package]
name = "m1nd-core"
version = "0.1.0"
edition = "2021"
description = "Neuro-symbolic code graph engine — core algorithms, graph, plasticity, resonance"
license = "MIT"
repository = "https://github.com/maxkle1nz/m1nd"
homepage = "https://m1nd.world"
documentation = "https://m1nd.world/wiki-build/architecture.html"
keywords = ["code-graph", "neuro-symbolic", "mcp", "hebbian", "spreading-activation"]
categories = ["development-tools", "algorithms"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
static_assertions = { workspace = true }

[lints]
workspace = true
