[package]
name = "m1nd-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP server for m1nd — 43 tools for AI agents to understand code structure"
license = "MIT"
repository = "https://github.com/maxkle1nz/m1nd"
homepage = "https://m1nd.world"
keywords = ["mcp", "code-graph", "ai-agents", "neuro-symbolic", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
m1nd-core = { version = "0.2.0", path = "../m1nd-core" }
m1nd-ingest = { version = "0.2.0", path = "../m1nd-ingest" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "signal"] }

[[bin]]
name = "m1nd-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
